name: NooBDD
version: 0.0.1
synopsis: A pure implementation of BDDs in Haskell.
license: GPL-2
license-file: LICENSE
author: Malvin Gattinger
maintainer: malvin@w4eg.de
category: Data
build-type: Simple
cabal-version: >=1.10
stability: experimental
extra-source-files: README.md

description: A pure implementation of BDDs in Haskell.
             Created for educational reasons, probably poor performance and many bugs.

library
  default-language: Haskell2010
  exposed-modules:  Data.NooBdd
  ghc-options:      -Wall
  build-depends:    base >= 4.6 && < 5,
                    process

source-repository head
  type:     git
  location: https://github.com/m4lvin/NooBDD.git
